<resources>
    <string name="app_name">Catch or Run</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback</string>
    <string name="back">Back</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="language">Language</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="menu">Menu</string>
    <string name="best_score">Best Score</string>
    <string name="current_score">Current Score</string>
    <string name="score">Score</string>
</resources>