<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".fragment.MainFragment">



    <TextView
        android:id="@+id/btn_start"
        android:padding="4dp"
        android:gravity="center"
        android:background="@drawable/bg_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:fontFamily="@font/jost_medium"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/btn_settings"
        android:padding="4dp"
        android:gravity="center"
        android:fontFamily="@font/jost_medium"
        android:layout_marginVertical="12dp"
        android:background="@drawable/bg_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/btn_feedback"
        android:gravity="center"
        android:fontFamily="@font/jost_medium"
        android:background="@drawable/bg_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_feedback"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"/>

</LinearLayout>