<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="60dp"
    android:background="#B2000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_score"
            android:textSize="32sp"
            android:fontFamily="@font/jost_bold"/>

        <TextView
            android:id="@+id/tv_best_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="32sp"
            android:fontFamily="@font/jost_bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_score"
            android:textSize="32sp"
            android:fontFamily="@font/jost_bold"/>

        <TextView
            android:id="@+id/tv_current_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="32sp"
            android:fontFamily="@font/jost_bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:id="@+id/btn_menu"
            android:padding="4dp"
            android:gravity="center"
            android:background="@drawable/bg_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:fontFamily="@font/jost_medium"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </LinearLayout>





</LinearLayout>